# llm-regression-guard

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: eval.yml
golden_dataset/: cases_v1.json
prompts/: email_classifier_v1.yaml  email_classifier_v2.yaml
src/regression_guard/: alerts.py  classifier.py  cli.py  contracts.py  dataset.py  diff.py  judge.py  prompts.py  rate_limit.py  reporter.py  runner.py  storage.py
src/regression_guard/templates/: report.html.j2
